<resources>
    <string name="app_name">Sound Map</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="my_recordings">My Recordings</string>
    <string name="end_time">0.0 seconds</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="calibration_pref">calibration_preference</string>
    <string name="save_local_pref">save_local_preference</string>
    <string name="debug_mode_pref">debug_mode_preference</string>
    <string name="calibrate_summary">Calibrate your device to known sound levels</string>
    <string name="calibrate_title">Calibration</string>
    <string name="create_an_account">Create an Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="retype_password">Retype password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout_preference">logout_preference</string>
    <string name="back">Back</string>
    <string name="no_measurements_yet">No measurements yet. Press the measure button to the left to get started!</string>
    <string name="local_only_pref">local_only_preference</string>
    <string name="local_only_summary">Removes the requirement that measurements must be taken with a microphone and allows for multiple measurements to be taken in the same area in a short time. Measurements in local only mode are not saved.</string>
    <string name="local_only_title">Local only mode</string>
    <string name="calibration_code_pref">calibration_code_pref</string>
    <string name="about_preference">about_preference</string>
    <string name="calibration_code_summary">To ensure that measurements uploaded to the database are accurate, you can only upload if your device has been calibrated at the Ohio State University\'s department of Speech and Hearing Science research lab. When your device is calibrated there, they will give you this password to enable uploading to the database</string>
</resources>
